[UPDATE]: Adjust open graph url property

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="Landin Page Animated">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="">
+        <meta property="og:url" content="https://alpacorp.github.io/landing-page-divided/">
         <meta property="og:image" content="./images/prev.png">
         <meta property="og:description" content="Landing toshow Playstation vs Xbox">
         <link rel="stylesheet" href="./style.css">
