[UPDATE]: Adjust open graph image property

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="Landin Page Animated">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://alpacorp.github.io/landing-page-divided/">
-        <meta property="og:image" content="./images/prev.png">
+        <meta property="og:image" content="https://alpacorp.github.io/landing-page-divided/images/ps.jpeg">
         <meta property="og:description" content="Landing toshow Playstation vs Xbox">
         <link rel="stylesheet" href="./style.css">
         <script src="https://kit.fontawesome.com/a62b8acbaa.js" crossorigin="anonymous"></script>
